--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "vite",
     "build": "vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "live-view": "vite build --watch & vite preview"
   },
   "dependencies": {
     "@vitejs/plugin-react": "^4.0.3",
